[package]
name = "surreal-napi-test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
dmp = "0.2.0"
napi = { version = "2", features = ["async", "serde-json"] }
napi-derive = "2"
serde = "1.0.188"
serde_json = "1.0.105"
surrealdb = { git = "https://github.com/surrealdb/surrealdb.git", features = [
    "kv-mem",
    "kv-rocksdb",
] }

[build-dependencies]
napi-build = "2.0.1"
